# rottweiler

./: CMakeLists.txt  DummyRotor.cpp  DummyRotor.h  GreenHeron.cpp  GreenHeron.h  RotArgs.cpp  RotArgs.h  RotCmd.cpp  RotCmd.h  RotCoord.cpp  RotCoord.h  RotErrs.h  Rotor.h  RottweilerClient.cpp  RottweilerClient.h  RottweilerServer.cpp  RottweilerServer.h  main.cpp
libserial/: CMakeLists.txt
sockpp/: CMakeLists.txt
spdlog/: cmake_install.cmake.tmp
tests/: main.cpp  test_rotcmd.cpp  tests.h
